[REF] service: Changed horizontal image processing & image upload field previsualization.

--- a/addons/music_manager/static/src/css/styles.css
+++ b/addons/music_manager/static/src/css/styles.css
@@ -9,6 +9,12 @@
     background-color: #ffffffa1 !important;
 }
 
+.crop-image-preview img {
+    object-fit: cover !important;
+    object-position: center !important;
+    aspect-ratio: 1 / 1;
+}
+
 /* Animations */
 @keyframes heartbeat {
     0%   { transform: scale(1); }
